// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ConnectedHeader renders the ConnectedHeader component 1`] = `
Object {
  "children": Array [
    <NavbarBrand
      className="custom-navbar__brand"
      tag="a"
      to="/"
    >
      <img
        alt="OpenSRP"
        src="logo.png"
      />
      <img
        alt="OpenSRP"
        src="vietnam-moh.png"
      />
    </NavbarBrand>,
    <NavbarToggler
      onClick={[Function]}
      tag="button"
      type="button"
    />,
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="ml-auto"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <NavLink
          activeClassName="active"
          className="nav-link"
          to="/login"
        >
          Login
        </NavLink>
        <LanguageSwitcher
          allLanguageOptions={
            Object {
              "en_core": "English",
              "vi_core": "Vietnamese",
            }
          }
          onLanguageChange={[Function]}
          supportedLanguages={
            Array [
              "en_core",
              "vi_core",
            ]
          }
        />
      </Nav>
    </Collapse>,
  ],
  "className": "custom-navbar navbar-expand-sm",
  "expand": false,
  "tag": "nav",
}
`;

exports[`components/ConnectedHeader renders the ConnectedHeader when logged in 1`] = `
Object {
  "children": Array [
    <NavbarBrand
      className="custom-navbar__brand"
      tag="a"
      to="/"
    >
      <img
        alt="OpenSRP"
        src="logo.png"
      />
      <img
        alt="OpenSRP"
        src="vietnam-moh.png"
      />
    </NavbarBrand>,
    <NavbarToggler
      onClick={[Function]}
      tag="button"
      type="button"
    />,
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      navbar={true}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <Nav
        className="ml-auto"
        navbar={true}
        tag="ul"
        vertical={false}
      >
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            color="secondary"
            nav={true}
          >
            <FontAwesomeIcon
              icon={
                Array [
                  "far",
                  "user",
                ]
              }
            />
             
            RobertBaratheon
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            right={true}
            tag="div"
          >
            <DropdownItem
              tag="button"
              toggle={true}
            >
              <NavLink
                activeClassName="active"
                className="nav-link"
                to="/logout"
              >
                Sign Out
              </NavLink>
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
        <LanguageSwitcher
          allLanguageOptions={
            Object {
              "en_core": "English",
              "vi_core": "Vietnamese",
            }
          }
          onLanguageChange={[Function]}
          supportedLanguages={
            Array [
              "en_core",
              "vi_core",
            ]
          }
        />
      </Nav>
    </Collapse>,
  ],
  "className": "custom-navbar navbar-expand-sm",
  "expand": false,
  "tag": "nav",
}
`;
